# turbo-themes

./: .gitignore  .lintro-config.yaml  .lintro-ignore  .markdownlintignore  .osv-scanner.toml  .prettierignore  .stylelintrc.json  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Gemfile  MAINTAINERS.md  Makefile  README.md  SECURITY.md  biome.json  package.json  postcss.config.js  pyproject.toml  renovate.json  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vite.js.config.js  vitest.config.ts
.github/: pages-bundle-manifest.json  versions.env
.github/workflows/: EGRESS-POLICIES.md  README.md  TRIGGERS.md  deploy-pages.yml  maintenance-auto-bump-refs.yml  maintenance-generate-snapshots.yml  maintenance-renovate-theme-sync.yml  pr-auto-assign.yml  pr-labeler.yml  publish-gem.yml  publish-npm-test.yml  publish-npm.yml  publish-python.yml  quality-ci-main.yml  quality-coverage-multi.yml  quality-e2e.yml  quality-examples.yml  quality-lintro.yml  quality-semantic-pr-title.yml  quality-theme-sync.yml  quality-validate-action-pinning.yml  release-auto-tag.yml  release-publish-pr.yml  release-version-pr.yml  renovate.yml  reporting-lighthouse-ci.yml  reporting-link-monitoring.yml  reusable-build.yml  reusable-quality.yml  reusable-sbom.yml  security-codeql.yml  security-dependency-review.yml  security-sbom.yml  security-scorecards.yml  vuln-suppression-check.yml
.husky/: pre-commit
apps/site/: astro.config.mjs  package.json
assets/css/: home-showcase.css  home.css  noir.css  site.css
assets/js/: tsconfig.json  (+7 more)
benchmarks/: theme-switching.bench.ts
config/: style-dictionary.config.js  token-mappings.json
docs/: E2E-TESTING.md  LOCAL-TEST-REPORTING.md  PLAYWRIGHT-VISUAL-TESTS.md  SECURITY-CSP.md
e2e/: accessibility.spec.ts  docs-toc.spec.ts  helpers.ts  homepage-theme.spec.ts  mobile-viewport.spec.ts  nav-smoke.spec.ts  performance.spec.ts  playground-visual.spec.ts  stackblitz.spec.ts  visual-regression.spec.ts
examples/: README.md
python/: pyproject.toml
schema/: turbo-themes-output.schema.json  turbo-themes.schema.json
scripts/: README.md  e2e-serve.mjs  format-utils.mjs  generate-css-dts.mjs  generate-tokens-json.mjs  normalize-wcag-aa-tokens.mjs  prepare-examples.mjs  prepare-style-dictionary.mjs  sync-ayu.mjs  sync-catppuccin.mjs  sync-github.mjs  sync-radix.mjs  sync-rose-pine.mjs  sync-version.mjs
test/: homepage-showcase.test.ts  package-files.test.ts  public-api.test.ts  tokens-hash.test.ts  validate-action-shas.test.ts  version-bump.test.ts
(+236 files in other folders)
